# minutes

./: README.md  minutes.py  pyproject.toml
prompt/: default.txt
