[tool.poetry]
name = "minutes"
version = "0.1.0"
description = ""
authors = ["yydevelop <yasudadevelop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "0.28"
moviepy = "^1.0.3"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
